--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ button:hover {
   background: #005fa3;
 }
 .gallery {
-  background:blanchedalmond;
+  background:rgb(202, 190, 176);
   color: black;
   padding: 20px;
   font:bold
@@ -85,7 +85,7 @@ footer {
 }
 .aboutheader {
   color: black;
-  background: bisque;
+  background: rgb(202, 190, 176);
   text-align: center;
   font-size: 20px;
   margin-top: 20px;
@@ -104,7 +104,7 @@ footer {
 }
 .contactheader {
   color: black;
-  background: bisque;
+  background:rgb(202, 190, 176);
   text-align: center;
   font-size: 20px;
   padding: auto;
@@ -173,7 +173,7 @@ ul {
 }
 .servicesheader {
   color: black;
-  background: bisque;
+  background:rgb(202, 190, 176);
   text-align: center;
   font-size: 20px;
   padding: auto;
@@ -182,7 +182,7 @@ ul {
 }
 .blogheader {
   color: black;
-  background: bisque;
+  background: rgb(202, 190, 176);
   text-align: center;
   font-size: 20px;
   padding: auto;
