--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ button {
     font-family: cursive, sans-serif;
     font-size: medium;
     font-weight: bold;
-  background: grey;
+  background: rgba(84, 83, 85, 0.905);
   color: white;
   border: none;
   padding: 20px;
@@ -119,14 +119,10 @@ footer {
   display: inline-block;
   padding: 12px 24px;
   margin: 10px;
-  background-color: #0063cc;
+  background-color: rgba(84, 83, 85, 0.905);
   color: white;
-  text-decoration: none;
   font-size: 16px;
-  border-radius: 8px;
-  transition: background-color 0.3s ease;
 }
-
 .contact-btn:hover {
   background-color: #005fa3;
 }
