--- a/style.css
+++ b/style.css
@@ -38,9 +38,7 @@ button {
     font-weight: bold;
   background: rgba(84, 83, 85, 0.905);
   color: white;
-  border: none;
   padding: 20px;
-  border-radius: 20px;
 }
 button:hover {
   background: #005fa3;
@@ -53,11 +51,9 @@ button:hover {
 }
 .gallerygrid {
   display: grid;
-  gap: 15px;
   margin-top: 20px;
 }
 .galleryitem image {
-  border-radius: 8px;
   display: block;
   size: 50%;
 }
@@ -123,28 +119,8 @@ footer {
   color: white;
   font-size: 16px;
 }
-.contact-btn:hover {
+.contactbtn:hover {
   background-color: #005fa3;
-}
-.contact-section input,
-.contact-section textarea {
-  width: 80%;
-  max-width: 400px;
-  padding: 10px;
-  margin: 10px 0;
-  border-radius: 6px;
-  border: 1px solid #ccc;
-  font-size: 16px;
-}
-
-.contact-section button {
-  padding: 12px 24px;
-  background-color: #0063cc;
-  color: white;
-  border: none;
-  border-radius: 8px;
-  font-size: 16px;
-  cursor: pointer;
 }
 
 ul {
