--- a/style.css
+++ b/style.css
@@ -57,10 +57,66 @@ button:hover {
   display: block;
   size: 50%;
 }
+.galleryitem {
+  transition: all 0.3s ease-in-out;
+  opacity: 1;
+}
 .commercial img, .home img {
   width: 300px;
   height: 150px;
   border-radius: 8px;
+}
+.testimonials {
+  text-align: center;
+  background: whitesmoke;
+}
+
+.testimonialcontainer {
+  position: relative;
+  max-width: 700px;
+  margin: 0 auto;
+}
+
+.testimonial {
+  display: block;
+  font-style: italic;
+  padding: 20px;
+  border: 1px solid gray;
+  background: white;
+}
+
+.testimonialactive {
+  display: block;
+  font-style: italic;
+  padding: 20px;
+  border: 1px solid gray;
+  background: white;
+}
+
+.testimonial h4 {
+  margin-top: 15px;
+  font-weight: bold;
+  font-style: normal;
+  color: black;
+}
+
+.testimonialbuttons {
+  margin-top: 20px;
+}
+
+.testimonialbuttons button {
+  background-color: rgba(84, 83, 85, 0.905);
+  color: white;
+  border: none;
+  padding: 10px 18px;
+  margin: 0 5px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 18px;
+}
+
+.testimonialbuttons button:hover {
+  background-color: #005fa3;
 }
 footer {
   background: black;
@@ -103,7 +159,7 @@ footer {
   background:rgb(202, 190, 176);
   text-align: center;
   font-size: 20px;
-  padding: auto;
+
     margin-top: 20px;
    display: block;
 }
@@ -121,6 +177,14 @@ footer {
 }
 .contactbtn:hover {
   background-color: #005fa3;
+}
+
+input.valid, textarea.valid {
+  border-color: green;
+}
+
+input.invalid, textarea.invalid {
+  border-color: red;
 }
 
 ul {
